--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -10,42 +10,45 @@
 
     <TextView
         android:id="@+id/textViewXplain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="357dp"
+        android:layout_height="154dp"
+        android:layout_margin="2dp"
         android:layout_marginBottom="421dp"
-        android:text="Per aggiungere un vaso all'orto, trascina l'icona del vaso nella posizione che preferisci.\nPer eliminare un vaso, trascinalo nel cestino.\nPer scambiare due vasi, trascinali uno sull'altro."
-        android:textSize="20sp"
+        android:elegantTextHeight="true"
+        android:includeFontPadding="true"
+        android:padding="6dp"
+        android:paddingStart="6dp"
+        android:text="Per aggiungere un vaso all'orto, trascina l'icona del vaso nella posizione che preferisci. Per eliminarlo, trascinalo nel cestino. Per scambiare due vasi, trascinali uno sull'altro. Quando sei soddisfatto dell'orto premi OK."
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <GridLayout
         android:id="@+id/grid_layout"
+        android:layout_width="200dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/border"
-        android:layout_width="175dp"
-        android:layout_height="350dp"
-        android:layout_marginTop="50dp"
         android:columnCount="2"
         android:foregroundGravity="center"
         android:rowCount="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+        app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
             android:id="@+id/cell1"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -59,12 +62,12 @@
 
         <FrameLayout
             android:id="@+id/cell8"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -78,12 +81,12 @@
 
         <FrameLayout
             android:id="@+id/cell2"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -97,12 +100,12 @@
 
         <FrameLayout
             android:id="@+id/cell7"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -116,12 +119,12 @@
 
         <FrameLayout
             android:id="@+id/cell3"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -135,12 +138,12 @@
 
         <FrameLayout
             android:id="@+id/cell6"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -154,12 +157,12 @@
 
         <FrameLayout
             android:id="@+id/cell4"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -173,12 +176,12 @@
 
         <FrameLayout
             android:id="@+id/cell5"
-            android:background="@drawable/border"
-            android:layout_margin="2dp"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_margin="2dp"
+            android:background="@drawable/border"
             android:foregroundGravity="center">
 
             <TextView
@@ -193,44 +196,81 @@
 
     <ImageView
         android:id="@+id/plant_pot_icon"
-        android:background="@drawable/filled"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/ic_pot"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="428dp"
+        android:background="@drawable/border"
+        android:src="@drawable/plant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/trash_icon"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/filled"
-        android:src="@drawable/ic_trash"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="272dp"
+        android:background="@drawable/border"
+        android:src="@drawable/trash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.411"
+        app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_set"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="120dp"
         android:background="@drawable/filled"
-        android:text="configurazione completata!"
+        android:text="OK!"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.938"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_conversion_absoluteHeight="48dp"
-        tools:layout_conversion_absoluteWidth="88dp" />
+        app:layout_constraintHorizontal_bias="0.94"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@android:drawable/bottom_bar"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ToggleButton
+            android:id="@+id/toggleButton1"
+            android:background="@drawable/config_toggle"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:button="@null"
+            android:textOff=""
+            android:textOn="" />
+
+        <ToggleButton
+            android:id="@+id/toggleButton2"
+            android:background="@drawable/cloud_toggle"
+            android:layout_marginHorizontal="70dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:button="@null"
+            android:textOff=""
+            android:textOn="" />
+
+        <ToggleButton
+            android:id="@+id/toggleButton3"
+            android:background="@drawable/valve_toggle"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:button="@null"
+            android:textOff=""
+            android:textOn="" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
