--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -10,36 +10,28 @@
 
     <TextView
         android:id="@+id/textViewXplain"
-        android:layout_width="357dp"
-        android:layout_height="154dp"
-        android:layout_margin="2dp"
-        android:layout_marginBottom="421dp"
-        android:elegantTextHeight="true"
-        android:includeFontPadding="true"
-        android:padding="6dp"
-        android:paddingStart="6dp"
-        android:text="Per aggiungere un vaso all'orto, trascina l'icona del vaso nella posizione che preferisci. Per eliminarlo, trascinalo nel cestino. Per scambiare due vasi, trascinali uno sull'altro. Quando sei soddisfatto dell'orto premi OK."
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Il tuo orto\n"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textSize="36dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <GridLayout
         android:id="@+id/grid_layout"
-        android:layout_width="200dp"
-        android:layout_height="400dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="180dp"
+        android:layout_height="360dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/border"
         android:columnCount="2"
-        android:foregroundGravity="center"
         android:rowCount="4"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textViewXplain">
 
         <FrameLayout
             android:id="@+id/cell1"
@@ -57,7 +49,8 @@
                 android:layout_gravity="center"
                 android:text="1"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#888888"/>
         </FrameLayout>
 
         <FrameLayout
@@ -76,6 +69,7 @@
                 android:layout_gravity="center"
                 android:text="8"
                 android:textSize="20sp"
+                android:textColor="#888888"
                 android:textStyle="bold" />
         </FrameLayout>
 
@@ -87,6 +81,7 @@
             android:layout_columnWeight="1"
             android:layout_margin="2dp"
             android:background="@drawable/border"
+            android:textColor="#888888"
             android:foregroundGravity="center">
 
             <TextView
@@ -95,6 +90,7 @@
                 android:layout_gravity="center"
                 android:text="2"
                 android:textSize="20sp"
+                android:textColor="#888888"
                 android:textStyle="bold" />
         </FrameLayout>
 
@@ -114,6 +110,7 @@
                 android:layout_gravity="center"
                 android:text="7"
                 android:textSize="20sp"
+                android:textColor="#888888"
                 android:textStyle="bold" />
         </FrameLayout>
 
@@ -133,6 +130,7 @@
                 android:layout_gravity="center"
                 android:text="3"
                 android:textSize="20sp"
+                android:textColor="#888888"
                 android:textStyle="bold" />
         </FrameLayout>
 
@@ -152,6 +150,7 @@
                 android:layout_gravity="center"
                 android:text="6"
                 android:textSize="20sp"
+                android:textColor="#888888"
                 android:textStyle="bold" />
         </FrameLayout>
 
@@ -171,6 +170,7 @@
                 android:layout_gravity="center"
                 android:text="4"
                 android:textSize="20sp"
+                android:textColor="#888888"
                 android:textStyle="bold" />
         </FrameLayout>
 
@@ -190,47 +190,34 @@
                 android:layout_gravity="center"
                 android:text="5"
                 android:textSize="20sp"
+                android:textColor="#888888"
                 android:textStyle="bold" />
         </FrameLayout>
     </GridLayout>
 
     <ImageView
         android:id="@+id/plant_pot_icon"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="428dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/border"
         android:src="@drawable/plant"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.94"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/trash_icon"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grid_layout" />
 
     <ImageView
         android:id="@+id/trash_icon"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="272dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/border"
         android:src="@drawable/trash"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.94"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button_set"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="120dp"
-        android:background="@drawable/filled"
-        android:text="OK!"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.94"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/plant_pot_icon"
+        app:layout_constraintTop_toBottomOf="@+id/grid_layout" />
 
     <LinearLayout
         android:id="@+id/bottom_bar"
@@ -244,29 +231,29 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ToggleButton
-            android:id="@+id/toggleButton1"
+            android:id="@+id/configToggle"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:background="@drawable/config_toggle"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
             android:button="@null"
             android:textOff=""
             android:textOn="" />
 
         <ToggleButton
-            android:id="@+id/toggleButton2"
-            android:background="@drawable/cloud_toggle"
+            android:id="@+id/cloudToggle"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_marginHorizontal="70dp"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:background="@drawable/cloud_toggle"
             android:button="@null"
             android:textOff=""
             android:textOn="" />
 
         <ToggleButton
-            android:id="@+id/toggleButton3"
-            android:background="@drawable/valve_toggle"
+            android:id="@+id/waterToggle"
             android:layout_width="64dp"
             android:layout_height="64dp"
+            android:background="@drawable/valve_toggle"
             android:button="@null"
             android:textOff=""
             android:textOn="" />
