--- a/app/src/main/res/layout/activity_synergy.xml
+++ b/app/src/main/res/layout/activity_synergy.xml
@@ -61,4 +61,13 @@ le piante vicine. Questo assicurerà che le tue piante crescano al meglio benefi
         tools:layout_conversion_absoluteHeight="48dp"
         tools:layout_conversion_absoluteWidth="88dp" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="343dp"
+        android:layout_height="527dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/synergy_comic"
+        tools:layout_editor_absoluteY="118dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
