--- a/app/src/main/res/layout/activity_synergy.xml
+++ b/app/src/main/res/layout/activity_synergy.xml
@@ -11,15 +11,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:elegantTextHeight="true"
         android:includeFontPadding="true"
         android:padding="6dp"
         android:paddingStart="6dp"
         android:text="Ecco un elenco delle colture consigliate in base alla loro sinergia con
 le piante vicine. Questo assicurerà che le tue piante crescano al meglio beneficiandosi a vicenda.\n"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
@@ -65,9 +65,10 @@ le piante vicine. Questo assicurerà che le tue piante crescano al meglio benefi
         android:id="@+id/imageView2"
         android:layout_width="343dp"
         android:layout_height="527dp"
+        android:layout_marginTop="117dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/synergy_comic"
-        tools:layout_editor_absoluteY="118dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/synergy_comic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
