--- a/app/src/main/res/layout-v23/activity_login.xml
+++ b/app/src/main/res/layout-v23/activity_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sfondo"
     tools:context=".LoginActivity">
 
 
@@ -71,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:text="Non hai un account? Registrati"
+        android:background="@color/cardview_light_background"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:text="Bentornato!"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
