--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sfondo"
     tools:context=".GridActivity"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="-50dp">
