--- a/app/src/main/res/layout/activity_synergy.xml
+++ b/app/src/main/res/layout/activity_synergy.xml
@@ -7,7 +7,7 @@
     tools:context=".SynergyActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewTop"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -15,8 +15,7 @@
         android:includeFontPadding="true"
         android:padding="6dp"
         android:paddingStart="6dp"
-        android:text="Ecco un elenco delle colture consigliate in base alla loro sinergia con
-le piante vicine. Questo assicurerà che le tue piante crescano al meglio beneficiandosi a vicenda.\n"
+        android:text="Pronti! Seleziona da questo elenco la specie che vuoi piantare in questo vaso. L'app ti suggerirà tutte le piante consigliate in base alla loro SINERGIA con quelle che hai già scelto!"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,11 +25,12 @@ le piante vicine. Questo assicurerà che le tue piante crescano al meglio benefi
         android:id="@+id/relativeLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@drawable/spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/textViewTop">
 
         <Spinner
             android:id="@+id/syn_crop_spinner"
@@ -38,11 +38,7 @@ le piante vicine. Questo assicurerà che le tue piante crescano al meglio benefi
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:minHeight="48dp"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.528"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="58dp" />
+            android:textAlignment="center" />
     </RelativeLayout>
 
     <Button
@@ -50,25 +46,39 @@ le piante vicine. Questo assicurerà che le tue piante crescano al meglio benefi
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/filled"
         android:text="conferma"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_conversion_absoluteHeight="48dp"
-        tools:layout_conversion_absoluteWidth="88dp" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:elegantTextHeight="true"
+        android:includeFontPadding="true"
+        android:padding="6dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="L'AGRICOLTURA SINERGICA è un viaggio verso l'equilibrio naturale. La saggezza della natura ci insegna a coltivare piante in combinazioni armoniose, potenziando le loro capacità naturali e beneficiando di un ecosistema rigoglioso e resiliente. Con Personal Garden potrai creare ambiente in cui ogni pianta aiuta l'altra a crescere, respingere i parassiti e prosperare!"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/button_confirm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="347dp"
-        android:layout_height="450dp"
-        android:layout_marginTop="212dp"
+        android:layout_width="254dp"
+        android:layout_height="227dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:srcCompat="@drawable/synergy_comic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
